--- a/EntityFrameworkAssignment/EntityFrameworkAssignment/EntityFrameworkAssignment.csproj
+++ b/EntityFrameworkAssignment/EntityFrameworkAssignment/EntityFrameworkAssignment.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Grade.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SchoolContext.cs" />
     <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
