--- a/TrumpAngular/package.json
+++ b/TrumpAngular/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trump-angular",
+  "name": "trumps",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,36 +11,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.6",
-    "@angular/common": "~10.0.6",
-    "@angular/compiler": "~10.0.6",
-    "@angular/core": "~10.0.6",
-    "@angular/forms": "~10.0.6",
-    "@angular/platform-browser": "~10.0.6",
-    "@angular/platform-browser-dynamic": "~10.0.6",
-    "@angular/router": "~10.0.6",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
+    "@angular/animations": "^10.0.8",
+    "@angular/common": "^10.0.8",
+    "@angular/compiler": "^10.0.8",
+    "@angular/core": "^10.0.8",
+    "@angular/forms": "^10.0.8",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "^10.0.8",
+    "@angular/platform-browser-dynamic": "^10.0.8",
+    "@angular/router": "^10.0.8",
+    "core-js": "^3.6.5",
+    "rxjs": "~6.6.2",
+    "tslib": "^2.0.1",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.5",
     "@angular/cli": "~10.0.5",
-    "@angular/compiler-cli": "~10.0.6",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "@angular/compiler-cli": "^10.0.8",
+    "@angular/language-service": "^10.0.8",
+    "@types/jasmine": "~3.5.12",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~14.0.27",
+    "codelyzer": "~6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "~5.1.1",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "ts-node": "~8.10.2",
+    "tslint": "~6.1.3",
+    "typescript": "~3.9.7"
   }
 }
